# python-course-homeworks

./: README.md  requirements.txt
homework10/: .gitignore  init.sh  pyproject.toml
homework10/web_app/: app.py  config.py  initialize.sh  pyproject.toml
homework10/web_app/migrations/versions/: ec0304b8aa55_.py
homework10/web_app/templates/: about.html  base.html
homework10/web_app/templates/stocks/: add_stock.html  base.html  remove.html
homework10/web_app/tests/test_models/: test_models.py
homework10/web_app/tests/test_views/: test_stocks.py
homework10/web_app/tests/tests_views/: test_stocks.py
homework10/web_app/web_app/models/: __init__.py  stocks.py
homework10/web_app/web_app/views/: __init__.py
homework10/web_app/web_app/views/stocks/: __init__.py  stock_main.py  stocks.py
homework_01/: main.py  (+1 more)
homework_06/web_app/: .gitignore  Dockerfile  __init__.py  app.py  config.py  entrypoint.sh  initialize  initialize.sh  pyproject.toml
homework_06/web_app/migrations/versions/: d5fa3a02b5fc_.py
homework_06/web_app/stocks/: stock_main.py  stocks.py
homework_06/web_app/templates/: add.html  base.html  index.html  products.html  test_page.html
homework_06/web_app/templates/stocks/: add_stock.html  base.html  details.html  list.html  remove.html
homework_06/web_app/web_app/: __init__.py
homework_06/web_app/web_app/config/: config.py
homework_06/web_app/web_app/models/: __init__.py  stocks.py
homework_06/web_app/web_app/views/: __init__.py  stocks_top.py
homework_06/web_app/web_app/views/stocks/: __init__.py  stock_main.py  stocks.py
(+65 files in other folders)
